# messenger

./: .env.example  .gitignore  alembic.ini  pyproject.toml
alembic/: env.py
alembic/versions/: 3f204cb41eca_init_db.py  8a5930249a03_add_unique_constraint_chat_participant.py  e788bc545448_set_the_name_field_in_the_app_user_.py
docs/: db_schema.mermaid
src/api/: main.py
src/api/config/: __init__.py  parse_env.py
src/api/core/: __init__.py  jwt.py  password.py
src/api/database/: __init__.py  database.py  get_db.py  models.py
src/api/routers/: __init__.py  api.py  auth.py  chat.py  chat_participant.py  message.py  user.py
src/api/schemas/: __init__.py  auth.py  chat.py  chat_participant.py  message.py  user.py
